# IFSul_PL_TSI

./: .gitignore
2025/ED/: CMakeLists.txt
2025/ED/List/: Lista.c  main.c
2025/ED/List/Linked/: listase.c  mainListaSE.c
2025/ED/List/Linked/Doble/: dobleLinkedList.c  dobleLinkedList.h
2025/ED/List/Linked/Doble/aula 10/: database.json  dobleLinkedList.c  main.c
2025/ED/Semana1/: 1.c  3.c  6.c
2025/ED/Semana2/: 4.c
2025/ED/controle de estoque/: CMakeLists.txt
2025/ED/controle de estoque envio/controller/cart/: menuCart.h
2025/ED/controle de estoque envio/controller/order/: orderMenu.c  orderMenu.h
2025/ED/controle de estoque envio/controller/stock/: menuStock.c
2025/ED/controle de estoque envio/db/: stock.json
2025/ED/controle de estoque envio/src/JSONparser/: json_handler.h
2025/ED/controle de estoque envio/src/structs/: util.c  util.h
2025/ED/controle de estoque envio/src/structs/list/: list.h
2025/ED/controle de estoque envio/src/structs/stack/: stack.c
2025/ED/controle de estoque envio/src/systemUtil/: systemUtil.c  systemUtil.h
2025/ED/controle de estoque/controller/: main.c
2025/ED/controle de estoque/controller/cart/: menuCart.c
2025/ED/controle de estoque/controller/stock/: menuStock.h
2025/ED/controle de estoque/src/JSONparser/: json_handler.c
2025/ED/controle de estoque/src/structs/list/: list.c
2025/ED/controle de estoque/src/structs/queue/: queue.c  (+1 more)
2025/ED/fila/linked/: filaSE.c  filaSE.h
2025/ED/semana3/: 1.c  3.c
2025/ED/semana3/4/:  Cheque.c   Cheque.h  main.c
2025/ED/stack/Linked/: Pilha encadeada.h  main.c
(+89 files in other folders)
